--- a/frontend/src/assets/chat.css
+++ b/frontend/src/assets/chat.css
@@ -1,3 +1,7 @@
+.chat-window {
+  height: calc(100vh - 48px);
+}
+
 #form {
   background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
@@ -21,16 +25,4 @@
   border-radius: 3px;
   outline: none;
   color: #fff;
-}
-
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#messages > li {
-  padding: 0.5rem 1rem;
-}
-#messages > li:nth-child(odd) {
-  background: #efefef;
 }
